# bfengine

./: AUTHORS  CMakeLists.txt  README.md  SETENV  appveyor.yml
bfe-core/: CMakeLists.txt  bfe_version.cpp  bfe_version.h  build_time_formatter.h  circular_buffer.h  circular_buffer.tpp  com_console.cpp  com_console.h  com_interface.cpp  com_interface.h  com_interface.tpp  com_interface_provider.h  com_interface_user.h  conf_bfengine.h  entity.h  handle.cpp  handle.h  handle_manager.cpp  handle_manager.h  handle_mixin.h  input_manager.cpp  input_manager.h  serializable.cpp  serializable.h  serialize_macros.h  serializer.h  serializer_basic.h  spinlock.cpp  spinlock.h  thread_module.cpp  thread_module.h  timer.cpp  timer.h  uid.cpp  uid.h  uid_user.h
bfe-graphics/: CMakeLists.txt
bfe-graphics/core/: CMakeLists.txt  font_manager.cpp  font_manager.h  font_manager.h.orig  graphics.cpp  graphics.h  render_mode.cpp  render_mode.h  render_target.cpp  render_target.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  shape_subtypes.h  text.cpp  text.h  texture.cpp  texture.h
bfe-graphics/window_management/: CMakeLists.txt  font_user.h  widget.h  widget_cam.cpp  widget_cam.h  widget_console.cpp  widget_console.h  widget_text.cpp  widget_text.h  win_frame_user.cpp  win_frame_user.h  window.cpp  window.h
bfe-log/: CMakeLists.txt  conf_log.h  conf_log.h.orig  log.cpp  log.h  log_common_types.h  log_defines.h  log_listener.h
bfe-lua/: CMakeLists.txt  lua_manager.cpp  lua_manager.h
bfe-util/: CMakeLists.txt
bfe-util/math/: CMakeLists.txt  adams_bashforth_integrator.h  adams_bashforth_integrator.tpp  adams_moulton_integrator.h  adams_moulton_integrator.tpp  euler_integrator.h  euler_integrator.tpp  integrator.h  integrator.tpp  math_constants.h
bfe-util/pcg/: CMakeLists.txt  namegenerator.cpp  namegenerator.h
