cmake_minimum_required(VERSION 3.1)

SET(OpenGL_GL_PREFERENCE "GLVND")

IF ("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
    SET(CMAKE_CXX_FLAGS "-std=c++14 -mtune=native -Wall -pedantic" CACHE STRING "")
ELSE()
    SET(CMAKE_CXX_FLAGS "-std=c++14 -mtune=native -Wall -Wextra -pedantic" CACHE STRING "")
ENDIF()


SET(DEFAULTDATADIR ${CMAKE_INSTALL_PREFIX}/share/bfengine)
ADD_DEFINITIONS(-DDEFAULTDATADIR="${DEFAULTDATADIR}")

PROJECT (bfengine)

OPTION(COMPILE_UNIT_TESTS "Compile unit tests. " OFF)

IF(COMPILE_UNIT_TESTS)
    ADD_SUBDIRECTORY(bfe_unit)
ENDIF(COMPILE_UNIT_TESTS)

ADD_SUBDIRECTORY(bfe-core/)
ADD_SUBDIRECTORY(bfe-graphics/)
ADD_SUBDIRECTORY(bfe-log/)
ADD_SUBDIRECTORY(bfe-lua/)
ADD_SUBDIRECTORY(bfe-util)
# ADD_SUBDIRECTORY(data)

